@@ -2,7 +2,7 @@
  *
  * Copyright 1999,2000,2001 BrightStation PLC
  * Copyright 2002 Ananova Ltd
- * Copyright 2003,2004,2007,2010,2011 Olly Betts
+ * Copyright 2003,2004,2007,2010,2011,2012,2013 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -34,7 +34,8 @@ SelectPostList::next(double w_min)
         PostList *p = source->next(w_min);
 	(void)p;
 	Assert(p == NULL); // AND should never prune
-    } while (!source->at_end() && !test_doc());
+	wt = -1;
+    } while (!source->at_end() && (!check_weight(w_min) || !test_doc()));
     RETURN(NULL);
 }
 
@@ -46,7 +47,8 @@ SelectPostList::skip_to(Xapian::docid did, double w_min)
 	PostList *p = source->skip_to(did, w_min);
 	(void)p;
 	Assert(p == NULL); // AND should never prune
-        if (!source->at_end() && !test_doc())
+	wt = -1;
+	if (!source->at_end() && (!check_weight(w_min) || !test_doc()))
 	    RETURN(SelectPostList::next(w_min));
     }
     RETURN(NULL);
@@ -59,7 +61,8 @@ SelectPostList::check(Xapian::docid did, double w_min, bool &valid)
     PostList *p = source->check(did, w_min, valid);
     (void)p;
     Assert(p == NULL); // AND should never prune
-    if (valid && !source->at_end() && !test_doc())
+    wt = -1;
+    if (valid && !source->at_end() && (!check_weight(w_min) || !test_doc()))
 	valid = false;
     RETURN(NULL);
 }
